# cpp-optimization-lab

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
Project00_common/: CMakeLists.txt  README.md
Project01_batch_oscillator/: CMakeLists.txt  README.md
Project01_batch_oscillator/docs/: design.md  experiment_plan.md  learning_log.md  progress_checklist.md
Project01_batch_oscillator/docs/experiments/: README.md  m0_undamped_long_term.md
Project01_batch_oscillator/include/: explicit_euler_step.h  harmonic_oscillator.h  state.h  time_integrators.h
Project01_batch_oscillator/src/: explicit_euler_step.cpp  harmonic_oscillator.cpp  main.cpp  time_integrators.cpp
Project01_batch_oscillator/tests/: test_harmonic_oscillator.cpp  test_harmonic_oscillator.h
docs/: benchmark_record_template.md  learning_log_template.md  project_planning_template.md  roadmap.md
